# monitoring-system

./: README.md
monitoring-dashboard/: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  package-lock.json  package.json
monitoring-dashboard/src/: App.tsx  index.css
monitoring-dashboard/src/components/: Header.css  Header.tsx  Sidebar.css  Sidebar.tsx  Table.css
monitoring-dashboard/src/config/: index.ts
monitoring-dashboard/src/layouts/: DashboardLayout.css  DashboardLayout.tsx
monitoring-dashboard/src/pages/: AgentsPage.css  AgentsPage.tsx  DashboardOverview.css  DashboardOverview.tsx  Login.css  Login.tsx  LogsPage.css  LogsPage.tsx  MetricsPage.tsx  SettingsPage.tsx  TrafficPage.tsx
monitoring-dashboard/src/services/: api.ts
monitoring-dashboard/src/store/: authStore.ts
monitoring-dashboard/src/types/: index.ts
monitoring-system/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE-APACHE  LICENSE-MIT  Makefile  QUICKSTART.md  README.md  SECURITY.md
monitoring-system/config/: agent.toml  collector.toml
monitoring-system/deployment/: docker-compose.yml
monitoring-system/deployment/docker/: Dockerfile.agent  Dockerfile.collector
monitoring-system/deployment/kubernetes/: collector-deployment.yaml  daemonset.yaml
monitoring-system/deployment/systemd/: monitoring-agent.service  monitoring-collector.service
monitoring-system/monitoring-agent/: Cargo.toml
monitoring-system/monitoring-agent/src/: config.rs  main.rs
monitoring-system/monitoring-agent/src/buffer/: ring_buffer.rs
monitoring-system/monitoring-agent/src/collectors/: mod.rs
monitoring-system/monitoring-agent/src/collectors/metrics/: mod.rs  prometheus.rs  system.rs
monitoring-system/monitoring-agent/src/collectors/traffic/: mod.rs  pcap_collector.rs
monitoring-system/monitoring-agent/src/pipeline/: batcher.rs  compressor.rs  mod.rs
monitoring-system/monitoring-agent/src/transport/: mod.rs  retry.rs  websocket.rs
monitoring-system/monitoring-collector/: Cargo.toml
monitoring-system/monitoring-collector/src/: config.rs  main.rs
monitoring-system/monitoring-collector/src/api/: mod.rs  websocket.rs
monitoring-system/monitoring-collector/src/auth/: mod.rs  token.rs
monitoring-system/monitoring-collector/src/pipeline/: compressor.rs  mod.rs
monitoring-system/monitoring-collector/src/processor/: batch_processor.rs  mod.rs
monitoring-system/monitoring-collector/src/storage/: console.rs  mod.rs
monitoring-system/monitoring-common/: Cargo.toml  build.rs
monitoring-system/monitoring-common/proto/: monitoring.proto
monitoring-system/monitoring-common/src/: error.rs  lib.rs  models.rs  proto.rs  test_data.rs
monitoring-system/scripts/: start-local.bat  start-local.sh
