[workspace]
members = [
    "monitoring-common",
    "monitoring-agent",
    "monitoring-collector",
]

resolver = "2"

[workspace.dependencies]
# Shared dependencies across workspace
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = "0.4"
