[package]
name = "monitoring-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "monitoring-agent"
path = "src/main.rs"

[dependencies]
# Common
monitoring-common = { path = "../monitoring-common" }

# CLI and Config
clap = { version = "4.4", features = ["derive", "env"] }
config = "0.14"
toml = "0.8"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File watching
notify = "6.1"
glob = "0.3"
inotify = { version = "0.10", optional = true }

# Journald
systemd = { version = "0.10", optional = true }

# System metrics
sysinfo = "0.30"
procfs = { version = "0.16", optional = true }

# Prometheus scraping
prometheus-parse = "0.2"
reqwest = { version = "0.11", features = ["json"] }

# Packet capture (optional)
pcap = { version = "1.1", optional = true }
pnet = { version = "0.34", optional = true }
rand = "0.8"

# Compression
snap = "1.1"  # Snappy compression
lz4 = { version = "1.24", optional = true }
flate2 = "1.0"

# Transport
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
http = "1.0"
tonic = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }

# TLS
rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2.0"

# Concurrency
crossbeam = "0.8"
parking_lot = "0.12"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
hostname = "0.4"
anyhow = "1.0"
thiserror = "1.0"

[features]
default = ["journald", "pcap-capture"]
journald = ["systemd"]
procfs-metrics = ["procfs"]
pcap-capture = ["pcap", "pnet"]
lz4-compression = ["lz4"]
grpc-transport = ["tonic", "prost"]

[build-dependencies]
tonic-build = { version = "0.11", optional = true }
