[package]
name = "monitoring-collector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "monitoring-collector"
path = "src/main.rs"

[dependencies]
# Common
monitoring-common = { path = "../monitoring-common" }

# CLI and Config
clap = { version = "4.4", features = ["derive", "env"] }
config = "0.14"
toml = "0.8"

# Web Framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# gRPC (optional)
tonic = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures-util = "0.3"
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TLS
rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2.0"
axum-server = { version = "0.6", features = ["tls-rustls"] }

# Auth
jsonwebtoken = "9.2"

# Compression
snap = "1.1"
lz4 = { version = "1.24", optional = true }
flate2 = "1.0"

# Storage (optional adapters)
clickhouse = { version = "0.11", optional = true }
rusoto_s3 = { version = "0.48", optional = true }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"

[features]
default = []
grpc = ["tonic", "prost"]
lz4-compression = ["lz4"]
clickhouse-storage = ["clickhouse"]
s3-storage = ["rusoto_s3"]

[build-dependencies]
tonic-build = { version = "0.11", optional = true }
